--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ body {
   word-break: keep-all;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Header */
 header {
   background-color: #3a3a3a;
@@ -75,16 +79,57 @@ header .basket {
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
+  display: none;
+}
+
+header .basket.show {
+  display: block;
+}
+
+header .basket .arrow {
+  width: 20px;
+  height: 10px;
+  position: absolute;
+  top: -10px;
+  right: 12px;
+  overflow: hidden;
+}
+
+header .basket .arrow::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  border: 1px solid #d2d2d2;
+  background-color: #fff;
+  transform: rotate(45deg);
+  transform-origin: 0 0;
+  position: absolute;
+  top: 0;
+  left: 50%;
 }
 
 header .basket .message {
+  padding: 30px 0;
+  font-size: 13px;
+  color: #6e6e6e;
+  text-align: center;
 }
 
 header .basket ul {
+  margin-top: 10px;
 }
 
 header .basket ul li {
+  border-top: 1px solid #d2d2d2;
 }
 
 header .basket ul li a {
+  display: block;
+  padding: 14px;
+  font-size: 13px;
+  color: #0071e3;
+}
+
+header .basket ul li a:hover {
+  text-decoration: underline;
 }
