--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,30 @@ body {
   /* 단어 단위로 줄바꿈 처리시키기 */
   word-break: keep-all;
   color: #1d1d1d;
+
+  background-color: #f6f6f8;
 }
 
 a {
   color: #1d1d1d;
   text-decoration: none;
+}
+
+img {
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+p {
+  line-height: 1.6;
+}
+
+.inner {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
 }
 
 /* Btn */
@@ -45,15 +64,64 @@ a {
   box-shadow: 0 0 0 4px #81b981;
 }
 
+/* Background image text */
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* Links */
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+a.link {
+  color: #0071e3;
+  font-size: 19px;
+  line-height: 1.3;
+}
+
+a.link:hover {
+  text-decoration: underline;
+}
+a.link::after {
+  content: ' >';
+}
+
+/* Figures */
+.figures {
+  position: relative;
+}
+
+.figures figure,
+.figures figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.figures figcaption * {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /* Header */
 header {
   background-color: #3a3a3a;
+  position: relative;
+  /* z-index는 position static에서는 작용하지 않음 */
+  z-index: 9;
 }
 
 header .inner {
-  position: relative;
   max-width: 1020px;
-  margin: 0 auto;
+  padding: 0 0;
 }
 
 header ul.menu {
@@ -325,10 +393,10 @@ nav {
 
 nav .inner {
   max-width: 1000px;
-  margin: 0 auto;
   height: 52px;
   display: flex;
   align-items: center;
+  padding: 0 0;
 }
 
 nav h1 {
@@ -363,4 +431,69 @@ nav .menu li.active a {
 
 nav .menu li.active:hover a {
   color: #1d1d1d;
+}
+
+/* HERO */
+.hero {
+  background-image: #f5f5f5;
+}
+.hero .inner {
+  padding-bottom: 110px;
+}
+.hero h1 {
+  width: 221px;
+  height: 91px;
+  background-image: url('../assets/images/hero_ipad_text.png');
+  position: absolute;
+  transform: translate(624px, 235px);
+  z-index: 1;
+}
+.hero .figures {
+  height: 808px;
+}
+.hero .figure {
+  transform: translate(74px, -64px);
+}
+.hero figure img {
+}
+.hero figure figcaption {
+}
+.hero figure figcaption .caption-camera {
+  transform: translate(43px, 580px);
+  background-image: url(../assets/images/hero_ipad_caption_camera.png);
+  width: 120px;
+  height: 84px;
+}
+.hero figure figcaption .caption-chip {
+  transform: translate(589px, 510px);
+  background-image: url(../assets/images/hero_ipad_caption_chip.png);
+  width: 95px;
+  height: 43px;
+}
+.hero figure figcaption .caption-storage {
+  transform: translate(627px, 631px);
+  background-image: url(../assets/images/hero_ipad_caption_storage.png);
+  width: 80px;
+  height: 43px;
+}
+.hero h2 {
+  width: 738px;
+  height: 145px;
+  margin: 0 auto;
+  background-image: url('../assets/images/hero_headline.png');
+}
+.hero p.pricing {
+  margin-top: 40px;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+.hero p.description {
+  width: 88%;
+  margin: 18px auto 0;
+  font-size: 19px;
+  text-align: center;
+}
+.hero .links {
+  margin-top: 30px;
 }
