--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+html {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-font: #1d1d1d;
+  --color-font-dargray: #6e6e6e;
+  --color-font-lightgray: #f5f5f5;
+  --color-link: #0071e3;
+  --color-link-focus: #81b9f1;
+  --color-border: #d2d2d2;
+  --color-header: #3a3a3a;
+  --color-section: #f5f5f5;
+  --color-shadow: rgba(0, 0, 0, 0.4);
+}
+
 html.fixed {
   position: fixed;
   overflow-y: scroll;
@@ -13,13 +27,13 @@ body {
 
   /* 단어 단위로 줄바꿈 처리시키기 */
   word-break: keep-all;
-  color: #1d1d1d;
+  color: var(--color-font);
 
-  background-color: #f6f6f8;
+  /* background-color: #f6f6f8; */
 }
 
 a {
-  color: #1d1d1d;
+  color: var(--color-font);
   text-decoration: none;
 }
 
@@ -52,8 +66,8 @@ p {
   outline: none;
   font-size: 11px;
   line-height: 1;
-  color: #fff;
-  background-color: #0071e3;
+  color: var(--color-white);
+  background-color: var(--color-link);
   cursor: pointer;
 }
 
@@ -61,7 +75,7 @@ p {
   opacity: 0.7;
 }
 .btn.focuse {
-  box-shadow: 0 0 0 4px #81b981;
+  box-shadow: 0 0 0 4px var(--color-link-focus);
 }
 
 /* Background image text */
@@ -81,7 +95,7 @@ p {
 }
 
 a.link {
-  color: #0071e3;
+  color: var(--color-link);
   font-size: 19px;
   line-height: 1.3;
 }
@@ -113,7 +127,9 @@ a.link::after {
 
 /* Header */
 header {
-  background-color: #3a3a3a;
+  --header-height: 44px;
+
+  background-color: var(--color-header);
   position: relative;
   /* z-index는 position static에서는 작용하지 않음 */
   z-index: 9;
@@ -125,7 +141,7 @@ header .inner {
 }
 
 header ul.menu {
-  height: 44px;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
 }
@@ -142,7 +158,7 @@ header ul.menu > li > a {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #f5f5f5;
+  color: var(--color-font-lightgray);
   opacity: 0.8;
 }
 
@@ -176,10 +192,10 @@ header ul.menu li.basket-starter > a {
 header .basket {
   width: 290px;
   padding: 10px 20px;
-  border: 1px solid #d2d2d2;
+  border: 1px solid var(--color-border);
   border-radius: 10px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: var(--color-white);
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
@@ -208,8 +224,8 @@ header .basket .arrow::before {
   content: '';
   width: 12px;
   height: 12px;
-  border: 1px solid #d2d2d2;
-  background-color: #fff;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-white);
   transform: rotate(45deg);
   transform-origin: 0 0;
   position: absolute;
@@ -220,7 +236,7 @@ header .basket .arrow::before {
 header .basket .message {
   padding: 30px 0;
   font-size: 13px;
-  color: #6e6e6e;
+  color: var(--color-font-dargray);
   text-align: center;
 }
 
@@ -229,14 +245,14 @@ header .basket ul {
 }
 
 header .basket ul li {
-  border-top: 1px solid #d2d2d2;
+  border-top: 1px solid var(--color-border);
 }
 
 header .basket ul li a {
   display: block;
   padding: 14px;
   font-size: 13px;
-  color: #0071e3;
+  color: var(--color-link);
 }
 
 header .basket ul li a:hover {
@@ -266,7 +282,7 @@ header .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--color-shadow);
 }
 
 header .search .textfield {
@@ -275,19 +291,19 @@ header .search .textfield {
 
 header .search input {
   width: 100%;
-  height: 44px;
+  height: var(--header-height);
   padding: 0 40px;
   border: none;
   outline: none;
   box-sizing: border-box;
   background-color: transparent;
   font-size: 17px;
-  color: #fff;
+  color: var(--color-white);
 }
 
 header .search .search-icon {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url('../assets/images/header_search.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -299,7 +315,7 @@ header .search .search-icon {
 
 header .search .search-closer {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-image: url('../assets/images/header_close.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -319,15 +335,15 @@ header .search .autocompletes {
   padding: 26px 40px 20px;
   border-radius: 0 0 18px 18px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: var(--color-white);
   position: absolute;
-  top: 44px;
+  top: var(--header-height);
   left: 0;
 }
 
 header .search .autocompletes h3 {
   font-size: 12px;
-  color: #6e6e6e;
+  color: var(--color-font-dargray);
   margin-bottom: 12px;
 }
 
@@ -346,8 +362,8 @@ header .search .autocompletes ul a {
 }
 
 header .search .autocompletes ul a:hover {
-  background-color: #f5f5f5;
-  color: #0071e3;
+  background-color: var(--color-section);
+  color: var(--color-link);
 }
 
 header .searching ul.menu li {
@@ -385,7 +401,7 @@ header.searching .search .autocompletes li {
 nav {
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid #d2d2d2;
+  border-bottom: 1px solid var(--color-border);
   position: sticky;
   top: 0;
   z-index: 8;
@@ -421,7 +437,7 @@ nav .menu li a {
 }
 
 nav .menu li a:hover {
-  color: #0071e3;
+  color: var(--color-link);
 }
 
 nav .menu li.active a {
@@ -430,12 +446,12 @@ nav .menu li.active a {
 }
 
 nav .menu li.active:hover a {
-  color: #1d1d1d;
+  color: var(--color-font);
 }
 
 /* HERO */
 .hero {
-  background-image: #f5f5f5;
+  background-color: var(--color-section);
 }
 .hero .inner {
   padding-bottom: 110px;
@@ -496,4 +512,48 @@ nav .menu li.active:hover a {
 }
 .hero .links {
   margin-top: 30px;
+}
+
+/* power = multiple apps*/
+.power {
+  margin-top: 110px;
+}
+.power .inner {
+}
+.power .multiple-apps {
+}
+.power .multiple-apps h1 {
+  background-image: url('../assets/images/power_headline.png');
+  width: 500px;
+  height: 280px;
+  transform: translate(104px, 0);
+}
+.power .multiple-apps .figures {
+  height: 773px;
+}
+.power .multiple-apps figcaption {
+  background-image: url(../assets/images/power_multiple_apps_caption.png);
+  width: 138px;
+  height: 46px;
+  transform: translate(703px, -47px);
+}
+
+/* power - arcade */
+.power .arcade {
+}
+.power .arcade .figures {
+}
+.power .arcade figure {
+}
+.power .arcade figcaption {
+}
+
+/* power - create */
+.power .create {
+}
+.power .create .figures {
+}
+.power .create .figure {
+}
+.power .create figcaption {
 }
