--- a/css/main.css
+++ b/css/main.css
@@ -107,9 +107,15 @@ a.link::after {
   content: ' >';
 }
 
+/* Feature */
+.feature {
+  display: flex;
+}
+
 /* Figures */
 .figures {
   position: relative;
+  flex-grow: 1;
 }
 
 .figures figure,
@@ -123,6 +129,86 @@ a.link::after {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+/* Infos */
+.infos {
+  display: flex;
+  flex-direction: column;
+}
+.infos.infos--center {
+  justify-content: center;
+}
+.infos.infos--end {
+  justify-content: flex-end;
+}
+.info {
+  max-width: 330px;
+  margin-bottom: 24px;
+}
+.info .icon {
+  width: 100px;
+  height: 100px;
+  margin: 0 0 -15px -30px;
+}
+.info .icon.icon--chip {
+  background-image: url('../assets/images/sprite_chip.png');
+}
+.info .icon.icon--faster {
+  background-image: url('../assets/images/sprite_faster.png');
+}
+.info .icon.icon--neural {
+  background-image: url('../assets/images/sprite_neural.png');
+}
+.info .icon.icon--apps {
+  background-image: url('../assets/images/sprite_apps.png');
+}
+.info .icon.icon--battery {
+  background-image: url('../assets/images/sprite_battery.png');
+}
+.info .icon.icon--display {
+  background-image: url('../assets/images/sprite_display.png');
+}
+.info .icon.icon--true-tone {
+  background-image: url('../assets/images/sprite_true_tone.png');
+}
+.info .icon.icon--center-stage {
+  background-image: url('../assets/images/sprite_center_stage.png');
+}
+.info .icon.icon--front-camera {
+  background-image: url('../assets/images/sprite_front_camera.png');
+}
+.info .icon.icon--back-camera {
+  background-image: url('../assets/images/sprite_back_camera.png');
+}
+.info .icon.icon--scan {
+  background-image: url('../assets/images/sprite_scan.png');
+}
+.info .icon.icon--download {
+  background-image: url('../assets/images/sprite_download.png');
+}
+.info .icon.icon--wifi {
+  background-image: url('../assets/images/sprite_wifi.png');
+}
+.info .icon.icon--lte {
+  background-image: url('../assets/images/sprite_lte.png');
+}
+.info .icon.icon--pencil {
+  background-image: url('../assets/images/sprite_pencil.png');
+}
+.info .icon.icon--keyboard {
+  background-image: url('../assets/images/sprite_keyboard.png');
+}
+.info .icon.icon--notes {
+  background-image: url('../assets/images/sprite_notes.png');
+}
+.info .icon.icon--covers {
+  background-image: url('../assets/images/sprite_covers.png');
+}
+.info p {
+  font-size: 21.5px;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
 /* Header */
@@ -540,20 +626,34 @@ nav .menu li.active:hover a {
 
 /* power - arcade */
 .power .arcade {
+  margin-top: 55px;
 }
 .power .arcade .figures {
+  height: 600px;
 }
 .power .arcade figure {
+  transform: translate(-347px, -90px);
 }
 .power .arcade figcaption {
+  width: 150px;
+  height: 77px;
+  background-image: url(../assets/images/power_arcade_caption.png);
+  transform: translate(483px, 653px);
 }
 
 /* power - create */
 .power .create {
+  margin-top: 55px;
 }
 .power .create .figures {
+  height: 772px;
 }
 .power .create .figure {
+  transform: translate(-25px, 50px);
 }
 .power .create figcaption {
+  width: 142px;
+  height: 46px;
+  background-image: url(../assets/images/power_create_caption.png);
+  transform: translate(543px, 908px);
 }
