--- a/css/main.css
+++ b/css/main.css
@@ -728,6 +728,35 @@ nav .menu li.active:hover a {
 .camera .stage .figure {
   transform: translate(90px, 0);
 }
+.camera .stage video {
+  position: absolute;
+  top: 36px;
+  left: 76px;
+  -webkit-mask-image: url(../assets/images/camera_video_mask.png);
+  mask-image: url(../assets/images/camera_video_mask.png);
+}
+.camera .stage .controller--play,
+.camera .stage .controller--pause {
+  color: var(--color-link);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transform: translate(428px, -134px) rotate(-3deg);
+}
+.camera .stage .controller--play:hover,
+.camera .stage .controller--pause:hover {
+  text-decoration: underline;
+}
+.camera .stage .controller--play.hide,
+.camera .stage .controller--pause.hide {
+  display: none;
+}
+.camera .stage .controller--play img,
+.camera .stage .controller--pause img {
+  width: 20px;
+  margin-top: -2px;
+}
 .camera .stage figcaption {
   background-image: url(/assets/images/camera_hardware_caption.png);
   width: 130px;
